Fixed styling problems on IE toolbar
git-svn-id: https://source.sakaiproject.org/svn/rwiki/trunk@21137 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/rwiki/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
+++ b/rwiki/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
@@ -229,7 +229,10 @@ a:hover.editToolBar,
 .editToolBarContainer {
     background-color: #efefde;
     height:1.6em;
-    padding:2px;
+    padding-top: 3px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
     border:1px solid #ccc;
 }
 
@@ -239,6 +242,46 @@ a:hover.editToolBar,
    font-size:.9em;
    border: 1px solid #efeffe;
 }
+
+a.previewToolBar, 
+a:visited.previewToolBar     {
+    border: 1px solid #efefde;	
+    cursor: default;   
+
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 8px;
+    padding-right: 8px;
+         
+}
+a:hover.previewToolBar, 
+    a:active.previewToolBar     {
+	border: 1px solid #316ac5;	
+    cursor: default;    
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 8px;
+    padding-right: 8px;
+        
+   
+}
+.previewToolBarContainer {
+    background-color: #efefde;
+    height:1.6em;
+    padding-top: 5px;
+    padding-bottom: 0px;
+    padding-left: 2px;
+    padding-right: 2px;
+    border:1px solid #ccc;
+}
+
+
+.previewToolBarContainer select {
+    zoom:1;
+   font-size:.9em;
+   border: 1px solid #efeffe;
+}
+
 
 
 a.anchorpoint {
